--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/web
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://192.168.0.22:4747/web
+spring.datasource.username=root
+spring.datasource.password=root
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
